# log_analyzer

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml
log_analyzer/: log_analyzer.py
logger/: logger.py
tests/: conftest.py  test_generate_report.py  test_parse_log.py
